--- a/backend/verify.html
+++ b/backend/verify.html
@@ -17,7 +17,7 @@
         </h1>
         <br>
         <div class="jumbotron">
-            <form id="formoid" action="" title="" method="post">
+            <form id="formoid" action="studentFormInsert.php" title="" method="post">
                 <div>
                     <h1><input type="password" id="passcode" name="passcode"/></h1>
                 </div>
@@ -29,12 +29,21 @@
     </div>
 
     <script>
+        /* attach a submit handler to the form */
         $("#formoid").submit(function(event) {
+
+            /* stop form from submitting normally */
             event.preventDefault();
+
+            /* get the action attribute from the <form action=""> element */
             var $form = $( this ),url = $form.attr( 'action' );
-            var posting = $.post( "/private/verify", { endpoint: '77', passcode: $('#passcode').val() } );
+
+            /* Send the data using post with element id name and name2*/
+            var posting = $.post( "http://localhost:3000/private/verify", { endpoint: '77', passcode: $('#passcode').val() } );
+
+            /* Alerts the results */
             posting.done(function( data ) {
-                window.location.replace(data.message);
+                alert('success');
             })
             .fail(function() {
                 alert( "Wrong" );
