--- a/public/verify.html
+++ b/public/verify.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Private Link</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <style>
         body { padding-top:50px; }
     </style>
@@ -15,7 +15,7 @@
         <h1>
             Enter Passcode
         </h1>
-        <br>
+        <hr>
         <div class="jumbotron">
             <form id="formoid" action="" title="" method="post">
                 <div>
