--- a/public/verify.html
+++ b/public/verify.html
@@ -12,17 +12,17 @@
 <body>
 
     <div class="container" style="text-align:center">
-        <h1>
+        <h3>
             Enter Passcode
-        </h1>
+        </h3>
         <hr>
         <div class="jumbotron">
             <form id="formoid" action="" title="" method="post">
-                <div>
-                    <h1><input type="password" id="passcode" name="passcode"/></h1>
+                <div class="row">
+                    <h1><input class="u-full-width" type="password" id="passcode" name="passcode" autofocus required/></h1>
                 </div>
-                <div>
-                    <input type="submit" id="submitButton" name="submitButton" value="Submit">
+                <div class="row">
+                    <input class="u-full-width button-primary" type="submit" id="submitButton" name="submitButton" value="Submit">
                 </div>
             </form>
         </div>
