--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
                 <form id="formoid" method="post">
                     <div class="row">
                         <div class="twelve columns">
-                            <input class="u-full-width" type="url" id="url" name="url" placeholder="Long url" autofocus required/>
+                            <input class="u-full-width" type="url" id="url" name="url" placeholder="Long URL" autofocus required/>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="four columns">
-                            <input class="u-full-width" type="text" id="shorturl" name="shorturl" placeholder="Short url (optional)"/>
+                            <input class="u-full-width" type="text" id="shorturl" name="shorturl" placeholder="Short URL (optional)"/>
                         </div>
                         <div class="four columns">
                             <input class="u-full-width" type="password" id="secure" name="secure" placeholder="Passcode (optional)"/>
