--- a/public/verify.html
+++ b/public/verify.html
@@ -19,7 +19,7 @@
         <div class="jumbotron">
             <form id="formoid" action="" title="" method="post">
                 <div class="row">
-                    <h1><input class="u-full-width" type="password" id="passcode" name="passcode" autofocus required/></h1>
+                    <h1><input class="u-full-width" type="password" id="passcode" name="passcode" placeholder="Passcode" autofocus required/></h1>
                 </div>
                 <div class="row">
                     <input class="u-full-width button-primary" type="submit" id="submitButton" name="submitButton" value="Submit">
