--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>GameBerry URL Shortner</title>
+    <title>URL Shortner</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <style>
         body { padding-top:50px; }
@@ -14,7 +14,7 @@
     <div class="container" style="text-align:center">
         <div class="jumbotron">
             <h3>
-                Gameberry URL Shortner
+                URL Shortner
             </h3>
             <hr>
             <div id="main">
